# lambdawerk-backend-test

./: .gitignore  Dockerfile  PROBLEM_DEFINITION.md  README.md  TASK.md  create-fun.sh  docker-compose.yml  init-role.sh  postgREST.env.sample  postgres.env.sample  rsa.jwk.pub.sample  rsa_hs226.jwk.sample  setup_db.sh
Importer/: Importer.cabal  LICENSE  README.md  hp2ps  importer-memleak.ps  importer-nomemleak.ps
Importer/app/: Main.hs
Importer/src/: Database.hs  Person.hs  Stats.hs  Types.hs
LambdawerkBackendTest/: LambdawerkBackendTest.cabal
LambdawerkBackendTest/app/: Main.hs
LambdawerkBackendTest/src/: Database.hs  Person.hs
