name:                Importer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Importer#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              futtetennista
maintainer:          futtetennista@gmail.com
copyright:           2017 futtetennista
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -O2
  exposed-modules:     Person
                     , Database
                     , Stats
                     , Types
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , xml-types == 0.3.6
                     , xml-conduit == 1.5.1
                     , xml-hamlet == 0.4.1.*
                     , conduit-combinators == 1.1.1
                     , bytestring == 0.10.8.*
                     , vector
                     , aeson == 1.1.2.*
                     , http-types == 0.9.*
                     , http-conduit == 2.2.3.2
                     , safe-exceptions == 0.1.6.*
                     , url == 2.1.*
                     , text == 1.2.2.*
                     , time == 1.6.0.*
                     , hlint == 2.0.*
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable importer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2
  build-depends:       base
                     , Importer
                     , protolude
                     , conduit-combinators
                     , bytestring
                     , vector
                     , time
                     , safe-exceptions
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Importer
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/Importer
