name:                LambdawerkBackendTest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/LambdawerkBackendTest#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Person
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , xml-types == 0.3.6
                     , xml-conduit == 1.5.1
                     , conduit-combinators == 1.1.1
                     , text == 1.2.2.2

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable LambdawerkBackendTest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LambdawerkBackendTest
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite LambdawerkBackendTest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LambdawerkBackendTest
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/LambdawerkBackendTest
